Fix for bug #22229: Bug in DATE_ADD()

From the manual:
date arithmetic operations require complete dates and do not work with
incomplete dates such as '2006-07-00' or badly malformed dates.